# music-library-search

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci-arm64.yml
app/: main.py  startup.py  streamlit.py
app/common/: constants.py  logging.py  settings.py  string_methods.py
app/discogs/: client.py  model.py  release_list.py
config/: config.yml  config.yml.template
webserver/: main.py
