[tool.poetry]
name = "music-library-search"
version = "0.1.0"
description = ""
authors = ["Matt Holubinka <meholubinka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
requests = "^2.32.3"
streamlit = "^1.41.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.12.0"
sqlalchemy-stubs = "^0.4"
pre-commit = "^4.0.1"
ruff = "^0.7.1"
types-pyyaml = "^6.0.12.20241230"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
