[tool.poetry]
name = "music-library-search"
version = "0.1.0"
description = ""
authors = ["Matt Holubinka <meholubinka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
fastapi = "^0.109.1"
sqlalchemy = "^2.0.19"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^24.3.0"
isort = "^5.12.0"
sqlalchemy-stubs = "^0.4"
pre-commit = "^4.0.1"
ruff = "^0.7.1"
types-pyyaml = "^6.0.12.20241230"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
